[refactor] some dodgy/unused code